--- a/Project 1 - Self Service Machine - Initial/index.html
+++ b/Project 1 - Self Service Machine - Initial/index.html
@@ -14,19 +14,24 @@
     <body>
         
         <main id="app">
-            <section v-if="true" class="items">
+            <section class="items">
                 <h4>Selecione seus produtos</h4>
-                <div v-for="product in products" class="product">
+                <div 
+                    v-for="product in products" 
+                    class="product" 
+                    @click="product.active = !product.active"
+                    :class="{selected : product.active}"
+                >
                     <div class="photo">
                         <img :src="product.photo">
                     </div>
                     <div class="description">
                         <span class="name">{{product.name}}</span>
                         <span class="price">{{product.price}}</span>
-                        <div class="quantity-area">
-                            <button>-</button>
+                        <div class="quantity-area" v-if="product.active">
+                            <button @click.stop="product.quantity--" :disabled="product.quantity <= 1">-</button>
                             <span class="quantity">{{product.quantity}}</span>
-                            <button>+</button>
+                            <button @click.stop="product.quantity++">+</button>
                         </div>
                     </div>
                 </div>
@@ -34,7 +39,7 @@
                 </div>
             </section>
 
-            <section class="summary">
+            <section class="summary" v-if="total() > 0">
                 <strong>Resumo do pedido</strong>
                 <table>
                     <thead>
@@ -44,14 +49,15 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr>
-                            <td>1x Big Mac</td>
-                            <td>5.99</td>
+                        <tr v-for= "product in products" >
+                            <template v-if = "product.active">
+                                <td>{{product.quantity + 'x ' + product.name}}</td>
+                                <td >{{(product.quantity * product.price).toFixed(2)}}</td>
+                            </template>
                         </tr>
-                        
                         <tr>
                             <th>Total</th>
-                            <th>5.99</th>
+                            <th>{{total().toFixed(2)}}</th>
                         </tr>
                     </tbody>
                 </table>
